# EPW-nano

./: Documentation-final.docx  README.md
code/change/EPW/src/: bte.f90  bte_check.f90  bte_export.f90  bte_phcheck.f90  bte_symm.f90  edos.f90  eimpbloch2wane.f90  eimpmat_shuffle.f90  elphon_shuffle_wrap.f90  ephwan2bloch2.f90  ephwan2blochp.f90  ephwann_shuffle.f90  epw_explore.f90  epw_readin.f90  evcbloch2wan.f90  fermilocation.f90  fermiwindow.f90  io_dyn_mat2.f90  io_epw.f90  make.depend  para_thl.f90  tetra.f90  wsweight.f90
code/change/LR_Modules/: Makefile  dv_of_drho.f90  make.depend
code/change/Modules/: plot_io.f90
code/espresso-5.4.0/: configure_command  make.sys  space_group.mod
code/espresso-5.4.0/BLAS/: make.inc
code/espresso-5.4.0/EPW/: README
code/espresso-5.4.0/EPW/src/: .dif.swp  Makefile  allocate_epwq.f90  bcast_epw_input.f90  bte_driver.f90  bte_impurity.f90  bte_io.f90  bte_iteration.f90  bte_transpt.f90  constants_epw.f90  dif  dynbloch2wan.f90  dynwan2bloch.f90  eimpbloch2wanp.f90  eimpwan2bloch2.f90  eimpwan2bloche.f90  elph2.f90  elphel2_shuffle.f90  ephbloch2wanp.f90  ephwan2bloche.f90  epw.f90  epwcom.f90  evcwan2bloch.f90  interp_thl.f90  loadumat.f90  nesting_fn.f90  phdrag_shuffle.f90  pw2wan90epw.f90  readmat_shuffle2.f90  rigid_epw.f90  selfen_elec.f90  selfen_phon.f90  spectral_func.f90  velwan2bloch.f90  vgwan2bloch.f90  wannierize.f90  write_ephmat.f90
code/espresso-5.4.0/LR_Modules/: cft_wave_2.f90  lrcom.f90
code/espresso-5.4.0/Modules/: xsf.f90
code/espresso-5.4.0/PHonon/D3/: d0rho.mod  d3aux.mod  d3com.mod  g0aux.mod  modesg0.mod  npert_mod.mod  q0modes.mod  testvar.mod  thirdorder.mod  units_d3.mod  units_d3ph.mod
code/espresso-5.4.0/PHonon/Gamma/: aa.mod  cgcom.mod  cgconv.mod  dielectric.mod  diffs.mod  dmu.mod  flags.mod  modes1.mod  phon.mod  phunits.mod  symmetry.mod
code/espresso-5.4.0/PHonon/PH/: allocate_phq.f90  bcast_ph_input.f90  close_phq.f90  do_phonon.f90  elphon.f90  openfilq.f90  ph_restart.f90  phcom.f90  phq_readin.f90  phqscf.f90  solve_linter.f90
code/espresso-5.4.0/PW/src/: plugin_clean.f90  print_ks_energies.f90
code/espresso-5.4.0/QHA/Debye/: Debye.x  Makefile
code/espresso-5.4.0/QHA/Examples/AlAs/: AlAs.QHA.out  Displacements.Al  Displacements.As  PHDOS.out  PHDOS.out.copy  Thermodynamics.Al  Thermodynamics.As  Theta_D  atom_info  atom_mass  displacement.in  eigenv  fqha.in  frequency  frequency.gp  matdyn.in  matdyn.init  matdyn.modes  matdyn.out  name  partial_DOS  phdos.in  phdos1.in  projected.DOS  projected_DOS.Al  run_Phonon_DOS.sh
code/espresso-5.4.0/QHA/Examples/InSb/: Displacements.In  Displacements.Sb  Edit_Me  InSb.QHA.out  InSb666.fc  PHDOS.out  PHDOS.out.copy  T_Debye.in  Temperature  Thermodynamics.In  Thermodynamics.Sb  Theta_D  atom_info  atom_mass  atom_name  displacement.in  eigenv  fqha.in  frequency  frequency.gp  kpts_out  matdyn.in  matdyn.init  matdyn.modes  matdyn.out  name  partial_DOS  phdos.in  phdos1.in  projected_DOS.In  projected_DOS.Sb  run_Phonon_DOS.sh
code/espresso-5.4.0/QHA/Phonon_DOS/: Makefile
code/espresso-5.4.0/QHA/SRC/: F_QHA.x  Ghost_DOS.x  Makefile  Mean_square_displacement.x  atom_info.x
code/espresso-5.4.0/S3DE/: .cvsignore  Makefile  OPTIONS  configure
code/espresso-5.4.0/S3DE/CONFIG/: .cvsignore  configure  configure.ac  configure.msg.in  make.sys.in
code/espresso-5.4.0/S3DE/IDE/: IDE.conf  IDE_makemake.sh  README  README.options  add_dir  arch.sh  basename_src  check_main  cvssnap.sh  dir_setup.sh  getoption  linked  makeinfo.sh  makemake.sh  makeouter.sh  makeversion.sh  moduledep.sh  packls.sh  reverse  split_line  tarlist.sh  used
code/espresso-5.4.0/S3DE/IDE/include/: IDE_version.h  IDE_version.sh
code/espresso-5.4.0/S3DE/iotk/: .cvsignore  ABOUT  CHANGES  DOWNLOAD  Makefile  OPTIONS  README  TODO  config.status  configure
code/espresso-5.4.0/S3DE/iotk/doc/: .cvsignore  binary_format.tex  file_format.txt  manpages  manual.txt
code/espresso-5.4.0/S3DE/iotk/include/: .cvsignore
code/espresso-5.4.0/S3DE/iotk/src/: .cvsignore  example1.f90  example2.f90  example3.f90  example4.f90  test.f90  test2.f90  test3.f90  test4.f90  test5.f90  test6.f90  test7.f90  test8.f90  test9.f90
code/espresso-5.4.0/S3DE/iotk/tools/: configure  configure.ac  export
code/espresso-5.4.0/S3DE/iotk/tools/autom4te.cache/: output.0  traces.0
code/espresso-5.4.0/W90/: w90chk2chk.x
code/espresso-5.4.0/W90/src/: parameters.F90
code/espresso-5.4.0/include/: c_defs.h  configure.h
code/espresso-5.4.0/install/: config.status  configure.msg  make_wannier90.sys
code/espresso-5.4.0/lapack-3.2/: Makefile  make.inc
code/espresso-5.4.0/lapack-3.2/INSTALL/: lawn81.ps  testdlamch  testdsecnd  testieee  testlsame  testsecond  testslamch  testversion
code/espresso-5.4.0/wannier90-2.0.1/: postw90.x  wannier90.x
example/1-Si-mobility/: Si.epw
example/1-Si-mobility/epw_results/: epw.in  epw.in2  pw_nscf.in  pw_scf.in
example/1-Si-mobility/epw_results/dvscf_dyn/: Si.dyn_q1  Si.dyn_q10  Si.dyn_q11  Si.dyn_q12  Si.dyn_q13  Si.dyn_q14  Si.dyn_q15  Si.dyn_q16  Si.dyn_q2  Si.dyn_q3  Si.dyn_q4  Si.dyn_q5  Si.dyn_q6  Si.dyn_q7  Si.dyn_q8  Si.dyn_q9
example/1-Si-mobility/pseudo/: Si.pz-n-nc.UPF
example/2-PbTe-defect/: PbTe.epw  defect_potential_interpolated_output.m
example/2-PbTe-defect/epw_results/: epw.in  pw_nscf.in  pw_scf.in
example/2-PbTe-defect/epw_results/dvscf_dyn/: PbTe.dyn_q1.xml  PbTe.dyn_q10.xml  PbTe.dyn_q11.xml  PbTe.dyn_q12.xml  PbTe.dyn_q13.xml  PbTe.dyn_q14.xml  PbTe.dyn_q15.xml  PbTe.dyn_q16.xml  PbTe.dyn_q2.xml  PbTe.dyn_q3.xml  PbTe.dyn_q4.xml  PbTe.dyn_q5.xml  PbTe.dyn_q6.xml  PbTe.dyn_q7.xml  PbTe.dyn_q8.xml  PbTe.dyn_q9.xml  rptext.py
example/2-PbTe-defect/pseudo/: Bi.rel-pz-n-nc.UPF  I.rel-pz-n-nc.UPF  Pb.rel-pz-n-nc.UPF  Te.rel-pz-n-nc.UPF
example/3-Si-phdrag/: Si.epw
example/3-Si-phdrag/epw_results/: epw.in  epw.in2  pw_nscf.in  pw_scf.in
example/3-Si-phdrag/epw_results/T300K/: BTE.w  BTE.w.nq80
example/3-Si-phdrag/epw_results/shengbte/: CONTROL  FORCE_CONSTANTS_3RD  espresso.ifc2
(+158 files in other folders)
